# marktplaatser

./: .gitignore  CLAUDE.md  LICENSE  MULTI_IMAGE_SUMMARY.md  OAUTH_SETUP.md  README.md  deploy.sh  package.json
marktplaats-backend/: .npmrc  FRONTEND_INTEGRATION.md  PINECONE_MIGRATION.md  PRICING_MODELS_SUMMARY.md  README.md  analyze_taxonomy.py  attribute_mapper.py  category_matcher.py  deploy.sh  deploy_pinecone.sh  generate_full_kb_documents.py  generate_listing_lambda.py  marktplaats_auth.py  package-lock.json  package.json  place_listing_lambda.py  pyproject.toml  quick_taxonomy_check.py  rekognition_utils.py  requirements.txt  response.json  run_transformation.py  s3_utils.py  serverless.yaml  setup.py  setup_pinecone.py  test.sh  test_create_ad.sh  test_image_b64.txt  test_me.py  test_oauth.py  test_payload.json  test_rag_direct.py  test_token_exchange.py  upload_to_pinecone.py
marktplaats-backend/src/marktplaats_backend/: __init__.py  attribute_mapper.py  bedrock_rag_utils.py  bedrock_utils.py  categories_lambda.py  category_matcher.py  create_advertisement_lambda.py  draft_image_upload_lambda.py  draft_management_lambda.py  draft_storage.py  generate_listing_lambda.py  get_advertisement_images_lambda.py  list_advertisements_lambda.py  manage_advertisement_lambda.py  marktplaats_ads_api.py  marktplaats_auth.py  oauth_authorize_lambda.py  (+5 more)
marktplaats-backend/tests/: __init__.py  test_attribute_mapper.py  test_attribute_mapping.py  test_auth_flow.py  test_bedrock_with_categories.py  test_category_1505_bug.py  test_category_change_fix.py  test_category_matcher.py  test_detailed_mapping.py  test_integration.py  test_multi_image.py
(+42 files in other folders)
